--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,13 @@ authors = ["Adam Beckmeyer <adam_gpg@thebeckmeyers.xyz>"]
 version = "0.1.0"
 
 [deps]
-Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Compose = "a81c6b42-2e10-5240-aca2-a61377ecd94b"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
-Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 SplitApplyCombine = "03a91e81-4c3e-53e1-a0a4-9c0c8f19dd66"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
